kubernetes/myservice/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: myservice-service
  labels:
    app: myservice

spec:
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 3000
      # externalIP: 192.168.88.120
  selector:
    app: myservice
  type: ClusterIP
